# kps-tekoaly

./: .coveragerc  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
Dokumentaatio/: Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md  Vikkoraportti3.md  kaytto-ohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: app.py  console_io.py  index.py
src/datastructures/: trie.py
src/services/: game_service.py  logic_service.py
src/tests/datastructures/: trie_test.py
src/tests/services/: game_service_test.py  logic_service_test.py
